loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:1: error: Missing closing brace `}' assumed here
var cpt = 0
^Poucet2:24: error: ';' expected but 'while' found.
} while(!sortieTrouvee()); 
  ^Poucet2:27: error: 'while' expected but '}' found.
}
^